[build-system]
requires = ["setuptools >= 61.0", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pymirc"
dynamic = ["version"]
dependencies = [
  "numpy>=1.15",
  "scipy>=1.1",
  "matplotlib>=2.2.2",
  "pydicom>=2.0",
  "scikit-image>=0.14",
  "numba>=0.39",
  "nibabel>=3.0",
]
requires-python = ">=3.8"
authors = [
  {name = "Georg Schramm"},
  {name = "Tom Eelbode"},
  {name = "Jeroen Bertels"},
]
maintainers = [
  {name = "Georg Schramm", email = "georg.schramm@kuleuven.be"}
]
description = "Python imaging utilities developed in the medical imaging research center of KU Leuven"
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
  "Operating System :: OS Independent",
]

[project.urls]
Repository = "https://github.com/gschramm/pymirc"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymirc*"]
exclude = ["pymirc.__pycache__"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "dirty-tag"